# QSARtuna

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  pytest.ini  singularity.def  validator.py
.github/workflows/: static.yml
docs/: Makefile
docs/sphinx-builddir/doctrees/: README.doctree  algorithms.doctree  deduplicator.doctree  descriptors.doctree  environment.pickle  index.doctree  modules.doctree  optunaz.config.doctree  optunaz.doctree  optunaz.utils.doctree  optunaz.utils.enums.doctree  optunaz.utils.preprocessing.doctree  splitters.doctree  transform.doctree
docs/sphinx-builddir/html/: .buildinfo  README.html  (+17 more)
docs/sphinx-source/: algorithms.rst  conf.py  deduplicator.rst  descriptors.rst  index.rst  transform.rst
examples/automl/: config.initial.template  config.retrain.template
examples/building/: AdaBoostClassifier_build.json  ChemProp_regression_build.json  LogisticRegression_classification_build.json  PRF_classification_build.json  RF_regression_build.json  RF_regression_build_handle_response_issue.json  Ridge_regression_build.json  XGBregressor_regression_build.json  calibration_build.json  calibration_chemprop_build.json  classification_build.json  classification_build_handle_response_issue.json  invalid_chemprop_ecfp.json  invalid_xgb_smilesfromfile.json
examples/optimization/: AdaBoostClassifier_classification.json  ChemProp_drd2_50.json  ChemProp_drd2_50_retrain.json  ChemProp_drd2_50_retrain_cls_error.json  ChemProp_drd2_50_retrain_missingfile.json  ChemProp_drd2_50_sideinfo.json  ChemProp_drd2_50_sideinfo_cls.json  ChemProp_hyperopt_drd2_50.json  ChemProp_hyperopt_drd2_50_sideinfo.json  ChemProp_hyperopt_drd2_50_sideinfo_cls_calibrated.json  Lasso_Ridge_regression.json  LogisticRegression_classification.json  LogisticRegression_classification_calibrated.json  PLS_regression.json  PRFC_P24863.json  RF_SVR_regression.json  RF_SVR_regression_ECFP_MACCS.json  XGBregressor_regression.json  classification.json  classification_drd2.json  classification_drd2_50.json  jazzy.json  peptide_classification.json  peptide_regression.json  prf_comparison.json  regression.json  regression_drd2_50.json  regression_drd2_50_composite.json  regression_drd2_50_precomputed_descriptor.json  regression_drd2_50_precomputed_descriptor_scaled.json  regression_drd2_50_rmse_scorer.json  regression_mapie.json  regression_test.json
examples/optimization_splitters/: histogram_opt.json  predefined_opt.json  random_lo_opt.json  random_opt.json  scaffold2_opt.json  scaffold3_opt.json  scaffold4_opt.json  scaffold_opt.json  stratified_lo_opt.json  stratified_opt.json  temporal_opt.json
examples/optimization_templates/: chemprop_opt.json  classification_opt.json  regression_opt.json
examples/slurm-scripts/: automl.template
notebooks/: QPTUNA_Tutorial.ipynb  preprocess_data.ipynb
optunaz/: __init__.py  automl.py  builder.py  convert.py  datareader.py  descriptors.py  evaluate.py  explainability.py  metircs.py  model_writer.py  objective.py  optbuild.py  predict.py  schemagen.py  three_step_opt_build_merge.py  visualizer.py
optunaz/algorithms/: VennABERS.py  calibrated_cv.py  chem_prop.py  chem_prop_hyperopt.py  mapie_uncertainty.py  probabilistic_random_forest.py  side_info.py
optunaz/config/: __init__.py  build_from_opt.py  buildconfig.py  logging_conf.json  optconfig.py
optunaz/utils/: __init__.py  files_paths.py  load_json.py  mlflow.py  retraining.py  schema.py  tracking.py
qptuna/: __init__.py
qsartuna/: __init__.py
tests/: integration_tests.sh  test_automl.py  test_calibration.py  test_chemprop.py  test_chemprop_hyperopt.py  test_chemprop_hyperopt_trainpred.py  test_chemprop_trainpred_invalidsmiles_intrprt_fps.py  test_composite_descriptor.py  test_convert.py  test_data_transformers.py  test_datareader.py  test_dedup.py  test_descriptors.py  test_example_jsons.py  test_explainability.py  test_explainability_functions.py  test_integration.py  test_json.py  test_json2.py  test_mapie.py  test_model_builder.py  test_multiple_descriptors.py  test_objective.py  test_optbuild.py  test_optbuild_chemprop.py  test_optbuild_prf.py  test_optsplitters.py  test_physchem_descriptor.py  test_precomputed_descriptor.py  test_predict_from_smiles.py  test_prfc.py  test_ptr.py  test_retrain.py  test_retrain_full.py  test_retrain_full2.py  test_splitters.py  test_svc_predict_proba.py  test_tracking_build.py  test_tracking_callback.py  test_transfer_learning.py  (+1 more)
tests/data/: PIM1_AZ.csv  failed.csv  histogramsplit_check.csv  reg_model.pkl  single_err_mol.csv  test.csv  train.csv
(+121 files in other folders)
