[tool.poetry]
name = "qptuna"
version = "2.4.1"
description = "QPTUNA: QSAR using Optimization for Hyper-parameter Tuning"
authors = ["Molecular AI, AstraZeneca <alexey.voronov1@astrazeneca.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "optunaz" },
    { include = "qptuna" },
]

[tool.poetry.dependencies]
python = "~3.7"
dill = "^0.3"
jsonpickle = "^2.0"
mlflow = "^1.19"
numpy = "<1.20"
optuna = "^2.9"
pandas = "^1.0"
xgboost = "<1.4"
rdkit-pypi = "^2021.03"
scikit-learn = "~0.21"
typing-extensions = "^3.10"
apischema = "^0.17"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
nbsphinx = "^0.8"
notebook = "^6.4"
pytest = "^6.2"
pytest-datadir = "^1.3"
recommonmark = "^0.7"
seaborn = "^0.11"
sphinx = "^4.1"
sphinx-apischema = "^0.1"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.scripts]
qptuna-optimize = "qptuna.optbuild:main"
qptuna-build = "qptuna.optbuild:main"
qptuna-predict = "qptuna.predict:main"
qptuna-schemagen = "qptuna.schemagen:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
