[tool.poetry]
name = "qsartuna"
version = "3.1.1"
description = "QSARtuna: QSAR using Optimization for Hyperparameter Tuning"
authors = ["Molecular AI, AstraZeneca"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "optunaz" },
    { include = "qsartuna" },
]

[tool.poetry.dependencies]
python = "3.10.10"
numpy = "1.23.5"
scipy = "1.9.2"
pandas = "^1.5.3"
jsonpickle = "^2.0"
xgboost = "^1.3"
rdkit = ">=2023.3.1"
scikit-learn = "1.4.0"
apischema = "^0.17"
chemprop = "1.6.1"
descriptastorus = "^2.4"  # Chemprop dependency, but chemprop does not install it itself.
prf = {git = "https://github.com/ireis/PRF.git", rev = "7ed097c26bbe9af0df0e724ac3b720f534cdc510"}  # There are no releases or tags, let's take the latest commit.
jazzy = "0.0.13"
shap = "0.41.0"
MAPIE = "0.6.4"
protobuf = "4.25.3" # 5.26.0 causes an error

[tool.poetry.group.optimization.dependencies]
mlflow = "^1.19"
sqlalchemy = "1.4.46"
optuna = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pydantic = "1.10.17"
coverage = ">5.1, <7.0"
matplotlib = "3.7.1"
nbsphinx = "^0.8"
notebook = "^6.4"
pytest = ">=6.2, <8.0"
pytest-datadir = "^1.3"
recommonmark = "^0.7"
seaborn = "0.13.2"
sphinx = "5.0.2"
sphinx-apischema = "^0.1"
sphinx-rtd-theme = "^1.0.0"
autodoc-pydantic = "^1.8.0"
sphinx-pydantic = "^0.1.1"
pandoc = "^2.3"
plotly = "5.15.0"

[tool.poetry.group.peptide.dependencies]
peptides = "0.3.2"
chemistry-adapters = "0.0.2"
mapchiral = "0.0.5"
amorprot = "0.0.5"

[tool.poetry.scripts]
qsartuna-optimize = "qsartuna.optbuild:main"
qsartuna-build = "qsartuna.optbuild:main"
qsartuna-predict = "qsartuna.predict:main"
qsartuna-schemagen = "qsartuna.schemagen:main"

[build-system]
requires = ["poetry-core>=1.5.2"]
build-backend = "poetry.core.masonry.api"